Fix some layout issues

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -123,7 +123,7 @@ $dark: #231F20;
 .bmvii-testimonials {
 	background-position: bottom;
 	background-size: contain;
-	padding-bottom: 10rem;
+	padding-bottom: 15rem;
 }
 
 .bmvii-testimonial__image {
